[package]
name = "smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
http_client = { git = "https://github.com/zed-industries/zed" }
reqwest_client = { git = "https://github.com/zed-industries/zed" }
anyhow = "1"
jupyter-protocol = { git = "https://github.com/runtimed/runtimed" }
jupyter-websocket-client = { git = "https://github.com/runtimed/runtimed" }
mybinder = { git = "https://github.com/runtimed/runtimed" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1.0"
